chore: Make configuration directory & its contents immutable
Refs: XRDDEV-1689